specific_ss.add(files('board.c'))
specific_ss.add(files('child.c'))
specific_ss.add(files('conf.c'))
specific_ss.add(files('coverage.c'))
specific_ss.add(files('cpu.c'))
specific_ss.add(files('inject.c'))
specific_ss.add(files('mem.c'))
specific_ss.add(files('snapshot.c'))
specific_ss.add(files('state.c'))